<resources>
    <string name="app_name">DemoNavigation</string>

    <!--special symbols-->
    <string name="symbol_ruble">₽</string>

    <!--bottom navigation main-->
    <string name="bottom_navigation_main">Main</string>
    <string name="bottom_navigation_first">First</string>
    <string name="bottom_navigation_second">Second</string>

    <!--toolbar menu-->
    <string name="toolbar_menu_settings">Settings</string>
    <string name="toolbar_menu_date">Date</string>
    <string name="toolbar_menu_graphic">Graphic</string>
    <string name="toolbar_menu_save">To File</string>
    <!--fragment main-->
    <string name="fragment_main_title">Main fragment</string>
    <string name="clear_btn_description">Очистить</string>
    <string name="save_btn_description">Сохранить</string>
    <string name="upload_btn_description">Загрузить</string>
    <string name="cancel_btn_description">Отмена</string>
    <string name="fragment_main_count_neurons">Количество групп</string>
    <string name="fragment_main_initialize_neuronet">Инициализировать</string>
    <string name="fragment_main_group">Группа</string>
    <string name="fragment_main_num">Номер в группе</string>
    <string name="fragment_main_weights_arrays">Веса нейронов</string>
    <string name="fragment_main_result_check_image">Результат проверки изображения</string>
    <string name="fragment_main_check_image">Проверить</string>
    <string name="fragment_main_train">Обучить</string>
    <string name="fragment_main_result_right">Правильно</string>
    <string name="fragment_main_result_wrong">Неправильно</string>
    <string name="fragment_main_dialog_title">Правильное число</string>

    <!--fragment first-->
    <string name="fragment_first_title">First fragment</string>
    <string name="fragment_first_to_child_btn">To child fragment</string>

    <!--fragment first child-->
    <string name="fragment_first_child_title">First child fragment</string>

    <!--fragment second-->
    <string name="fragment_second_title">Курс валют</string>
    <string name="fragment_second_hint">Данные еще не загружены.\nДождитесь окончания загрузки.</string>
    <string name="fragment_second_hint_image_desc">hint image</string>
    <string name="fragment_second_date_hint">Выбранная дата: --/--/----</string>
    <string name="fragment_second_date_title">Выбранная дата:</string>
    <!--fragment second graph-->
    <string name="fragment_second_graph_title">График курсов валют</string>
    

    <!--fragment_dynamic_list-->
    <string name="fragment_dynamic_list_date1_hint">От --/--/----</string>
    <string name="fragment_dynamic_list_date1_title">От </string>
    <string name="fragment_dynamic_list_date2_hint">До --/--/----</string>
    <string name="fragment_dynamic_list_date2_title">До </string>
    <string name="fragment_dynamic_list_date_error">Некорректная дата.</string>

    <!--fragment dynamic graph-->
    <string name="fragment_dynamic_graph_title">График валюты </string>


    <!--item_dynamic-->
    <string name="item_dynamic_date_title">Дата: </string>
    <string name="item_dynamic_value_title">Значение: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
